app/02-service-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
  #labels:
    #app: php
spec:
  type: NodePort
  selector:
    app: php
  ports:
    - port: 8080
      nodePort: 30800
      targetPort: 80
    #- port: 5678
